tools/shook/src/snapshots/shook__payload__tests__nomad_body_linux-aarch64.snap
---
source: src/payload.rs
expression: value
---
{
  "Meta": {
    "cpu_mhz": 3200,
    "image": "ubuntu-22.04",
    "memory_mb": 7812,
    "owner": "my-org",
    "platform": "linux-aarch64",
    "repo": "my-repo"
  }
}
